--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -8,6 +8,11 @@ custom-foot: js/table-js.html
 
 {{ content }}
 
+table {
+  display: block;
+  overflow-x: auto;
+}
+
 <div class="table-responsive-md">
     <table id="item-table" class="table table-striped">
         <thead>
