--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -61,13 +61,13 @@ a {
 }
 
 #footer-nav .nav-link.active, #footer-nav .show > .nav-link {
-    color: #fff;
+    color: rgb(255 88 0 / 91%);
     border: solid white 1px;
     background: transparent;
   }
 
   #footer-nav .nav-link:hover {
-    color: white;
+    color: rgb(255 131 65 / 91%);
     background: rgba(255,255,255,.10);
 }
 
