Colorful footer nav?

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -60,16 +60,21 @@ a {
     img { height: 40px; }
 }
 
+#footer-nav .nav-link {
+    color: white;
+}
+
 #footer-nav .nav-link.active, #footer-nav .show > .nav-link {
-    color: rgb(255 88 0 / 91%);
+    color: rgba(255, 88, 0, 91%);
     border: solid white 1px;
     background: transparent;
   }
 
   #footer-nav .nav-link:hover {
-    color: rgb(255 131 65 / 91%);
+    color: rgba(255, 131, 65, 91%);
     background: rgba(255,255,255,.10);
 }
+
 
 /* scroll to top */
 #scroll-to-top {
