--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -7,3 +7,18 @@
     padding-top: 9em;
     padding-bottom: 9em;
 }
+
+#footer-nav .nav-link {
+    color: white;
+}
+
+#footer-nav .nav-link.active, #footer-nav .show > .nav-link {
+    color: rgba(255, 88, 0, 91%);
+    border: solid white 1px;
+    background: transparent;
+  }
+
+  #footer-nav .nav-link:hover {
+    color: rgba(255, 131, 65, 91%);
+    background: rgba(255,255,255,.10);
+}
