--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
             <h2 class="h4"><a href="{{ '/' | relative_url }}" class="text-white font-weight-normal">{{ site.title }}</a></h2>
             <p class="text-white"><small>{{ site.description }}</small></p>
             <nav>
-                <ul id="footer-nav" class="nav nav-pills ">
+                <ul id="footer-nav" class="nav nav-pills text-orange">
                     {%- assign navItems = site.data.config-nav | where_exp: 'item', 'item.dropdown_parent == nil' -%}
                     {% for nav in navItems %}
                     <li class="nav-item">
