--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -22,3 +22,8 @@
     color: rgba(255, 131, 65, 91%);
     background: rgba(255,255,255,.10);
 }
+
+div.table-responsive-md {
+    overflow: auto;
+    white-space: nowrap;
+} 
