--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -8,6 +8,21 @@
     padding-bottom: 9em;
 }
 
+#main-navbar .nav-link {
+    color: white;
+}
+
+#main-navbar .nav-link.active, #main-nav .show > .nav-link {
+    color: rgba(255, 88, 0, 91%);
+    border: solid white 1px;
+    background: transparent;
+  }
+
+  #main-navbar .nav-link:hover {
+    color: rgba(255, 131, 65, 91%);
+    background: rgba(255,255,255,.10);
+}
+
 #footer-nav .nav-link {
     color: white;
 }
