--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -14,7 +14,6 @@
 
 #main-navbar .nav-link.active, #main-nav .show > .nav-link {
     color: rgba(255, 88, 0, 91%);
-    border: solid white 1px;
     background: transparent;
   }
 
@@ -25,6 +24,7 @@
 
 #footer-nav .nav-link {
     color: white;
+    font: Avantgarde
 }
 
 #footer-nav .nav-link.active, #footer-nav .show > .nav-link {
