--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -38,7 +38,7 @@
     background: rgba(255,255,255,.10);
 }
 
-#item-table {
+#item-table_wrapper {
     overflow: auto;
     white-space: nowrap;
 } 
