--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -45,3 +45,8 @@
 .card-body {
     color: black;
 }
+.display-4{
+    font-family: "Barlow Condensed",sans-serif;
+    display:block;
+    font-size: 25px;
+}
