change font size and try out diff font

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -46,7 +46,7 @@
     color: black;
 }
 .display-4{
-    font-family: "Barlow Condensed",sans-serif;
+    font-family: "Montserrat",sans-serif;
     display:block;
     font-size: 40px;
 }
