change tittle font and size

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -46,7 +46,10 @@
     color: black;
 }
 .display-4{
-    font-family: "Montserrat",sans-serif;
+    font-family: "Barlow Condensed",sans-serif;
     display:block;
-    font-size: 40px;
+    font-size: 50px;
+}
+.mb-0{
+    font-family: "Montserrat",sans-serif;
 }
