--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -23,10 +23,10 @@ gallery: true
         <div class="col-12 col-md-10">
             <div id="item-content"></div>
         </div>
-        <div class="col-12 col-md-10">
+        <!-- <div class="col-12 col-md-10">
             <div id="item-metadata">
             </div>
-        </div> 
+        </div>  -->
     </div>
 
     {%- if site.data.theme.browse-buttons == true -%}
