update active color

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -13,7 +13,7 @@
 }
 
 #main-navbar .nav-link.active, #main-nav .show > .nav-link {
-    color: rgba(255, 88, 0, 91%);
+    color: #f70000;
     background: transparent;
   }
 
