--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -18,7 +18,7 @@
   }
 
   #main-navbar .nav-link:hover {
-    color: rgba(255, 131, 65, 91%);
+    color: #f70000;
     background: rgba(255,255,255,.10);
 }
 
