change hover color

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -28,13 +28,13 @@
 }
 
 #footer-nav .nav-link.active, #footer-nav .show > .nav-link {
-    color: rgba(255, 88, 0, 91%);
+    color: #f70000;
     border: solid white 1px;
     background: transparent;
   }
 
   #footer-nav .nav-link:hover {
-    color: rgba(255, 131, 65, 91%);
+    color: #f70000;
     background: rgba(255,255,255,.10);
 }
 
