--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -44,6 +44,36 @@
 } 
 .card-body {
     color: black;
+    font-family: "Montserrat", sans-serif;
+    font-size: 17px;
+}
+}
+.card-title{
+    font-size: 1.5625em;
+    line-height: 1;
+    font-family: "Barlow Condensed",sans-serif;
+    font-size: 25px;
+}
+.btn{
+    text-decoration: none;
+    cursor: pointer;
+    display: inline-block;
+    vertical-align: baseline;
+    border: 0;
+    text-align: center;
+    background-color: transparent;
+    -webkit-transition: color 500ms, background 500ms;
+    -o-transition: color 500ms, background 500ms;
+    transition: color 500ms, background 500ms;
+    padding: .675em 1.3em;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.2;
+    text-transform: uppercase;
+    letter-spacing: .75px;
+    background: #000;
+    font-family: "Barlow Condensed", sans-serif;
+    color: #fff;
 }
 .display-4{
     font-family: "Barlow Condensed",sans-serif;
