--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -71,7 +71,7 @@
 //     // letter-spacing: .75px;
 //     // background: #000;
      font-family: "Barlow Condensed", sans-serif;
-     color: #fff;
+     // color: #fff;
 }
 .display-4{
     font-family: "Barlow Condensed",sans-serif;
