more button work

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -52,7 +52,7 @@
     font-family: "Barlow Condensed",sans-serif;
     font-size: 25px;
 }
-.btn{
+.btn .btn-outline-primary{
      text-decoration: none;
 //     cursor: pointer;
 //     display: inline-block;
