Make browse button outline red

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -73,6 +73,10 @@
      font-family: "Barlow Condensed", sans-serif;
      // color: #fff;
 }
+.btn-outline-secondary{
+    color:#f00;
+    border-color:#f00
+}
 .display-4{
     font-family: "Barlow Condensed",sans-serif;
     display:block;
