make buttons red when hovered

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -77,6 +77,10 @@
     color:#f00;
     border-color:#f00
 }
+.btn-outline-secondar:hover{
+    color:#f00;
+    border-color:#f00
+}
 .display-4{
     font-family: "Barlow Condensed",sans-serif;
     display:block;
