primary button color

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -77,8 +77,12 @@
     color:#f00;
     border-color:#f00
 }
-.btn-outline-secondar:hover{
+.btn-outline-secondary:hover{
     color:#f00;
+    border-color:#f00
+}
+.btn-primary{
+    background-color:#f00;
     border-color:#f00
 }
 .display-4{
