change color of filter reset button?

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -87,7 +87,7 @@ h1, h2, h3 {
     color:#f00;
     border-color:#f00
 }
-.btn-outline-secondary:hover{
+.btn-outline-secondary.filter{
     color:#f00;
     border-color:#f00
 }
