filter button: white outline when hovered

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -87,9 +87,9 @@ h1, h2, h3 {
     color:#f00;
     border-color:#f00
 }
-.btn-outline-secondary.filter{
-    color:#f00;
-    border-color:#f00
+.btn-outline-secondary:hover{
+    color:#fff;
+    border-color:#fff
 }
 .btn-primary{
     background-color:#f00;
