--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -46,7 +46,7 @@
     font-family: "Montserrat", sans-serif;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4, h5 {
     font-family: "Barlow Condensed",sans-serif;
 }
 
@@ -59,6 +59,7 @@ h1, h2, h3 {
     font-size: 1.5625em;
     line-height: 1;
     font-family: "Barlow Condensed",sans-serif;
+    font-weight: 500;
     font-size: 25px;
 }
 
@@ -116,4 +117,9 @@ h1, h2, h3 {
     background-color: #f00; /* Red */
     border-color: #000;
     color: #fff;
+}
+
+// timeline
+.col-lg-4.col-md-6 {
+    color: #000;
 }
