--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -42,7 +42,8 @@ function makeCard(obj) {
     //     thumbSrc = '{{ "/assets/lib/icons/" | relative_url }}{{ icons.icon-default }}.svg';
     // }  
     // start card
-    var card = '<div class="item col-lg-4 col-md-6 col-sm-12 mb-2"><div class="card">';
+    <!-- var card = '<div class="item col-lg-4 col-md-6 col-sm-12 mb-2"><div class="card">'; -->
+    var card = '<div class="item col-lg-4 col-md-6 col-sm-12 mb-2 d-flex"><div class="card flex-grow-1">';
     // top image for photos
     // if(imgSrc) {
     //     card += '<a href="' + itemHref + '"> <img class="card-img-top lazyload" data-src="' + imgSrc + '" alt="Image of ' + obj.title + '"></a>';
