--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -43,61 +43,61 @@ function makeCard(obj) {
     // }  
     // start card
     <!-- var card = '<div class="item col-lg-4 col-md-6 col-sm-12 mb-2"><div class="card">'; -->
-    var card = '<div class="item col-lg-4 col-md-6 col-sm-12 mb-2 d-flex"><div class="card flex-grow-1">';
-    // top image for photos
-    // if(imgSrc) {
-    //     card += '<a href="' + itemHref + '"> <img class="card-img-top lazyload" data-src="' + imgSrc + '" alt="Image of ' + obj.title + '"></a>';
-    // }
-    // title
-    card += '<div class="card-body text-center"> <h3 class="card-title h4"><a href="' + itemHref + '" class="text-dark">' + obj.title + '</a></h3>';
-    // thumb for non-photo items
-    // if(thumbSrc){
-    //     card += '<p><a href="' + itemHref + '"><img class="lazyload w-50" data-src="' + thumbSrc + '" alt="Image of ' + obj.title + '"></a></p>';
-    // }
-    // other fields
-    card += '<p class="card-text">';
-    {% for f in fields %}{% unless f.hidden == 'true' %}
-    if(obj[{{ f.field | jsonify }}]){
-    {% if f.display_name %}card += '<strong>{{ f.display_name }}:</strong> ';{% endif %}
-    {% if f.btn == 'true' %}
-    var btns = obj[{{ f.field | jsonify }}].split(";");
-    for (var i = 0, len = btns.length; i < len; i++) {
-      if(btns[i] != "") {
-        card += '<a class="btn btn-sm btn-secondary m-1 text-wrap" href="{{ '/browse.html' | relative_url }}#' + encodeURIComponent(btns[i].trim()) + '">' + btns[i].trim() + '</a>';
-      }
-    }
-    {% else %}
-    card += obj[{{ f.field | jsonify }}];
-    {% endif %}
-    {% unless forloop.last %}card += '<br>';{% endunless %}
-    }
-    {% endunless %}{% endfor %}
-    card += '</p>';
-    // media type
-    // if(obj.format != "") {
-    //     card += '<p class="card-text"><small><a class="btn btn-sm btn-outline-secondary" href="{{ '/browse.html' | relative_url }}#' + encodeURIComponent(obj.format) + '">' + 
-    //     obj.format.split("/").pop().replace("_", " ").toUpperCase() + ' <svg class="bi icon-sprite"><use xlink:href="{{ "/assets/lib/cb-icons.svg" | relative_url }}#';
-    //     if(obj.format.includes('image')){
-    //         card += 'icon-image';
-    //     } else if(obj.format.includes('audio')){
-    //         card += 'icon-audio';
-    //     } else if(obj.format.includes('video')){
-    //         card += 'icon-video';
-    //     } else if(obj.format.includes('multiple')){
-    //         card += 'icon-multiple';
-    //     } else if(obj.format.includes('compound')){
-    //         card += 'icon-compound-object';
-    //     } else {
-    //         card += 'icon-default';
-    //     }
-    //     card += '"></span></a></small></p>';
-    // }
-    // view button
-    card += '<hr><a href="' + itemHref + '" class="btn btn-sm btn-light" title="link to ' + obj.title + '">View Full Record</a>';
-    // close divs
-    card += '</div></div></div>';
-    // send back big string
-    return card;
+        var card = '<div class="item col-lg-4 col-md-6 col-sm-12 mb-2 d-flex"><div class="card flex-grow-1 d-flex flex-column justify-content-between">';
+            // top image for photos
+            // if(imgSrc) {
+            //     card += '<a href="' + itemHref + '"> <img class="card-img-top lazyload" data-src="' + imgSrc + '" alt="Image of ' + obj.title + '"></a>';
+            // }
+            // title
+            card += '<div class="card-body text-center"> <h3 class="card-title h4"><a href="' + itemHref + '" class="text-dark">' + obj.title + '</a></h3>';
+            // thumb for non-photo items
+            // if(thumbSrc){
+            //     card += '<p><a href="' + itemHref + '"><img class="lazyload w-50" data-src="' + thumbSrc + '" alt="Image of ' + obj.title + '"></a></p>';
+            // }
+            // other fields
+            card += '<p class="card-text">';
+            {% for f in fields %}{% unless f.hidden == 'true' %}
+            if(obj[{{ f.field | jsonify }}]){
+            {% if f.display_name %}card += '<strong>{{ f.display_name }}:</strong> ';{% endif %}
+            {% if f.btn == 'true' %}
+            var btns = obj[{{ f.field | jsonify }}].split(";");
+            for (var i = 0, len = btns.length; i < len; i++) {
+              if(btns[i] != "") {
+                card += '<a class="btn btn-sm btn-secondary m-1 text-wrap" href="{{ '/browse.html' | relative_url }}#' + encodeURIComponent(btns[i].trim()) + '">' + btns[i].trim() + '</a>';
+              }
+            }
+            {% else %}
+            card += obj[{{ f.field | jsonify }}];
+            {% endif %}
+            {% unless forloop.last %}card += '<br>';{% endunless %}
+            }
+            {% endunless %}{% endfor %}
+            card += '</p>';
+            // media type
+            // if(obj.format != "") {
+            //     card += '<p class="card-text"><small><a class="btn btn-sm btn-outline-secondary" href="{{ '/browse.html' | relative_url }}#' + encodeURIComponent(obj.format) + '">' + 
+            //     obj.format.split("/").pop().replace("_", " ").toUpperCase() + ' <svg class="bi icon-sprite"><use xlink:href="{{ "/assets/lib/cb-icons.svg" | relative_url }}#';
+            //     if(obj.format.includes('image')){
+            //         card += 'icon-image';
+            //     } else if(obj.format.includes('audio')){
+            //         card += 'icon-audio';
+            //     } else if(obj.format.includes('video')){
+            //         card += 'icon-video';
+            //     } else if(obj.format.includes('multiple')){
+            //         card += 'icon-multiple';
+            //     } else if(obj.format.includes('compound')){
+            //         card += 'icon-compound-object';
+            //     } else {
+            //         card += 'icon-default';
+            //     }
+            //     card += '"></span></a></small></p>';
+            // }
+            // view button
+            card += '<hr><a href="' + itemHref + '" class="btn btn-sm btn-light mb-3" title="link to ' + obj.title + '">View Full Record</a>';
+            // close divs
+            card += '</div></div></div>';
+            // send back big string
+            return card;
 }
 
 /* filter items function */
