Add filter accordion?

--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -38,4 +38,6 @@ custom-foot: js/browse-js.html
     <div class="spinner-border text-dark" role="status"><span class="visually-hidden">Loading...</span></div>
 </div>
 
+{% include accordion.html title1="Example section" text1=example1 title2="Section two" text2=example2 title3="Section three" text3=example3 %}
+
 <div class="row" id="browseItems"></div>
