--- a/_includes/feature/accordion.html
+++ b/_includes/feature/accordion.html
@@ -2,7 +2,7 @@
 
     Bootstrap accordion feature, https://getbootstrap.com/docs/5.1/components/accordion/
 
-    e.g. --> {% include accordion.html title1="Example section" text1=example1 title2="Section two" text2=example2 title3="Section three" text3=example3 %}
+    e.g. --> {% include accordion.html title1="Example section" text1=example1 title2="Section two" text2=example2 title3="Section Seven" text3=example3 %}
 
     Options:
     - "title1", "title2", "title3" = title for each section of accordion (max three)
@@ -45,6 +45,62 @@
         </button>
       </h2>
       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionInclude">
+        <div class="accordion-body">
+            {{ include.text3 | markdownify }}
+        </div>
+      </div>
+    </div>
+    {% endif %}
+    {% if include.title4 %}
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingFour">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            {{ include.title4 }}
+        </button>
+      </h2>
+      <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionInclude">
+        <div class="accordion-body">
+            {{ include.text4 | markdownify }}
+        </div>
+      </div>
+    </div>
+    {% endif %}
+    {% if include.title5 %}
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingFive">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+            {{ include.title5 }}
+        </button>
+      </h2>
+      <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionInclude">
+        <div class="accordion-body">
+            {{ include.text5 | markdownify }}
+        </div>
+      </div>
+    </div>
+    {% endif %}
+    {% if include.title6 %}
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingSix">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+            {{ include.title6 }}
+        </button>
+      </h2>
+      <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionInclude">
+        <div class="accordion-body">
+            {{ include.text6 | markdownify }}
+        </div>
+      </div>
+    </div>
+    {% endif %}
+    {% if include.title7 %}
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingSeven">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+            {{ include.title3 }}
+        </button>
+      </h2>
+      <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionInclude">
         <div class="accordion-body">
             {{ include.text3 | markdownify }}
         </div>
