Fill in expanded filter accordion

--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -38,6 +38,6 @@ custom-foot: js/browse-js.html
     <div class="spinner-border text-dark" role="status"><span class="visually-hidden">Loading...</span></div>
 </div>
 
-{% include feature/accordion.html title1="Example section" text1=example1 title2="Section two" text2=example2 title3="Section three" text3=example3 %}
+{% include feature/accordion.html title1="Media Format" text1="Search by item type" title2="Author/Artist" text2="Search by author/artist" title3="Date" text3="Search by date range" title4="Languages" text4="Search by language" title5="Topic" text5="Search by topic"%}
 
 <div class="row" id="browseItems"></div>
